EDIT : 20250628 마이페이지메인 완료

--- a/html/userPage/myPage.html
+++ b/html/userPage/myPage.html
@@ -8,10 +8,10 @@
   <link rel="stylesheet" href="../../css/layout/main-layout.css">
   <link rel="stylesheet" href="../../css/layout/list-layout.css">
   <link rel="stylesheet" href="../../css/layout/userPage-layout.css">
-  <link rel="stylesheet" href="../../css/myPage/myPage.css">
+  <link rel="stylesheet" href="../../css/userPage/myPage.css">
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
   <script defer src="../../js/basic/userPage.js"></script>
-  <script defer src="../../js/myPage/myPage.js"></script>
+  <script defer src="../../js/userPage/myPage.js"></script>
   <script defer src="../../js/basic/basic.js"></script>
 </head>
 <body>
@@ -39,28 +39,33 @@
         <div id="DIV-USER-PROFILE-IMG">
             <img src="../../image/example/profile_image/profile3.jpg">
         </div>
+        <!-- 유저 나이, 닉네임, 메세지함, 설정 -->
         <div id="DIV-USER-INFO-WRAP">
-          <div><span class="div-age">20대</span></div>
+          <div class="div-age-wrap"><span class="div-age">20대</span></div>
           <div class="div-nick-btn-wrap">
             <div class="div-nickname">포근한 하루</div>
             <div class="div-message-btn">메세지함</div>
-            <div class="div-settings-btn">설정</div>
+            <div class="div-settings-btn" onclick="location.href=''">
+              <img src="../../image/userPage/setting.png">설정
+            </div>
           </div>
+          <!-- 게시글, 팔로워, 팔로우 -->
           <div class="div-counts-wrap">
             <div class="div-type-wrap">
               <div class="div-count-name">게시글</div>
               <div class="div-count">10</div>
             </div>
-            <div class="div-type-wrap">
+            <div class="div-type-wrap follow-click show-follower">
               <div class="div-count-name">팔로워</div>
               <div class="div-count">254</div>
             </div>
-            <div class="div-type-wrap">
+            <div class="div-type-wrap follow-click show-follow">
               <div class="div-count-name">팔로우</div>
               <div class="div-count">112</div>
             </div>
           </div>
-          <div class="div-user-info">이불 속 온기를 좋아하는 사람 🛏️</div>
+          <!-- 유저 한 줄 소개 -->
+          <div class="div-user-info">이불 속 온기를 좋아하는 사람<br>조용한 하루를 즐깁니다 🌿</div>
         </div>
     </div>
     <!--  -->
@@ -73,7 +78,7 @@
             <li class="ca-hover"></li>
             <li class="li-category-wrap">
                 <div class="div-category div-selected" data-category="my-board">
-                    <img src="../../image/myPage/board_menu.png" class="ca-img" data-category="my-board">
+                    <img src="../../image/userPage/board_menu.png" class="ca-img" data-category="my-board">
                     <div>작성 글 (10)</div>
                 </div>
             </li>
@@ -229,7 +234,7 @@
                       <div class="div-profile-wrap">
                         <div class="div-go-user-page">
                           <img src="../../image/example/profile_image/profile3.jpg" onclick="">
-                          <div class="div-nickname div-nick div-one-skip" onclick="">조용한 오후</div>
+                          <div class="div-nickname div-nick" onclick=""><span>조용한 오후</div>
                         </div>
                         <div class="div-age">20대</div>
                       </div>
@@ -376,6 +381,50 @@
       </div>
     </div>
   </div>
+  <!--  -->
+
+  <!-- 팔로워, 팔로우 모달창 -->
+  <!-- <div class="div-alert-container modal-follow">
+    <div class="div-alert-wrap">
+      <div id="DIV-MODAL-HEADER">
+        <div class="div-modal-title">팔로워</div>
+        <img src="../../image/userPage/close_btn_grey.png" class="modal-follow-close" alt="close">
+      </div>
+
+      <div class="div-alert-content">
+        <div id="DIV-USER-SEARCH-WRAP">
+
+          <input type="text" id="user-search" placeholder="누구를 찾고 있나요?">
+        </div>
+        <div id="DIV-USER-COUNT-WRAP">
+          총 <div id="USER-COUNT">10</div>명
+        </div>
+        <div id="DIV-USER-LIST-WRAP">
+
+          <div class="div-user-wrap">
+            <div class="div-follow-user-wrap">
+              <div class="div-user-profile-img user-profile-img">
+                <img src="../../image/example/profile_image/profile1.jpg">
+              </div>
+              <div class="div-user-simple-info">
+                <div class="user-nick"><span class="user-nickname">조용한 오후</span></div>
+                <div class="user-info-wrap">
+                  <div class="user-info div-one-skip">집에 햇살과 고양이가 함께 있어요.</div>
+                </div>
+              </div>
+            </div>
+            <div class="div-follow-btn-wrap">
+              <div class="button-style delete-button" onclick="noFollow(event, this, 1)">삭제</div>
+              <div class="button-style basic-button" onclick="noFollow(event, this, 1)">팔로잉</div>
+              <div class="button-style follow-btn" onclick="goFollow(event, this, 0)">팔로우</div>
+            </div>
+          </div>
+          
+        </div>
+      </div>
+
+    </div>
+  </div> -->
   <!--  -->
 
 </body>
