--- a/html/login/join-required.html
+++ b/html/login/join-required.html
@@ -61,11 +61,11 @@
             </div>
             <div class="div-join-input-wrap div-age-visible-wrap">
               <label for="age-visible-yes">
-                <input type="radio" name="age-visible" id="age-visible-yes" class="input-join-data required-input" value="Y" required checked>
+                <input type="radio" name="age-visible" value="Y" id="age-visible-yes" class="input-join-data required-input" required checked>
                 <span>보여주기</span>
               </label>
               <label for="age-visible-no" class="">
-                <input type="radio" name="age-visible" id="age-visible-no" class="input-join-data required-input" value="N" required>
+                <input type="radio" name="age-visible" value="N" id="age-visible-no" class="input-join-data required-input" required>
                 <span>숨기기</span>
               </label>
             </div>
