--- a/html/userPage/myPage.html
+++ b/html/userPage/myPage.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="../../css/layout/userPage-layout.css">
   <link rel="stylesheet" href="../../css/userPage/myPage.css">
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-  <script defer src="../../js/basic/userPage.js"></script>
+  <script defer src="../../js/userPage/userPage.js"></script>
   <script defer src="../../js/userPage/myPage.js"></script>
   <script defer src="../../js/basic/basic.js"></script>
 </head>
@@ -45,7 +45,7 @@
           <div class="div-nick-btn-wrap">
             <div class="div-nickname">포근한 하루</div>
             <div class="div-message-btn">메세지함</div>
-            <div class="div-settings-btn" onclick="location.href=''">
+            <div class="div-settings-btn" onclick="location.href='mypage-settings.html'">
               <img src="../../image/userPage/setting.png">설정
             </div>
           </div>
