--- a/html/login/join-required.html
+++ b/html/login/join-required.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="../../css/login/join-required.css">
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
   <script defer src="../../js/login/join-required.js"></script>
+  <script defer src="../../js/basic/basic.js"></script>
 </head>
 <body>
   <!-- 상단 공통 헤더 영역 -->
