EDIT : 20250629 개인 정보 수정 상태에서 페이지 이동 시 알람띄우는 작업 완료

--- a/html/userPage/mypage-settings.html
+++ b/html/userPage/mypage-settings.html
@@ -81,7 +81,7 @@
               <div class="div-column-text">한 줄 소개</div>
             </div>
             <div class="div-data-column-wrap">
-              <input type="text" name="intro" id="INPUT-INTRO" class="input-mypage" autocomplete="off">
+              <input type="text" name="intro" data-original="" id="INPUT-INTRO" class="input-mypage" autocomplete="off">
               <div class="div-check-msg">짧은 한 문장이 더 오래 머물 수 있어요 (30자 이내)</div>
             </div>
           </div>
@@ -100,11 +100,11 @@
             <div class="div-data-column-wrap">
               <div class="div-age-visible-wrap">
                 <label for="age-visible-yes">
-                  <input type="radio" name="age-visible" value="Y" id="age-visible-yes" class="input-join-data required-input" required checked>
+                  <input type="radio" name="age-visible" data-original="Y" value="Y" id="age-visible-yes" class="input-join-data required-input" required checked>
                   <span>보여주기</span>
                 </label>
                 <label for="age-visible-no" class="">
-                  <input type="radio" name="age-visible" value="N" id="age-visible-no" class="input-join-data required-input" required>
+                  <input type="radio" name="age-visible" data-original="Y" value="N" id="age-visible-no" class="input-join-data required-input" required>
                   <span>숨기기</span>
                 </label>
               </div>
