--- a/html/community/community-write.html
+++ b/html/community/community-write.html
@@ -14,8 +14,10 @@
   <link rel="stylesheet" href="../../css/layout/write-layout.css">
   <link rel="stylesheet" href="../../css/community/community-write.css">
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-  <script defer src="../../js/community/community-write.js"></script>
   <script defer src="../../js/basic/basic.js"></script>
+  <script defer src="../../js/community/community-write.js"></script>
+  <!-- TinyMCE Editor -->
+  <script src="https://cdn.tiny.cloud/1/zofwqu4mz4a8fi7sczm8ax1dhgbenvoz1xob3thhkvgz4uiw/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
 
 </head>
 <body>
@@ -74,7 +76,7 @@
             <div class="div-column-name">내용</div>
             <div class="div-column-content-wrap">
             <textarea name="content" id="TEXTAREA-CONTENT" placeholder="인테리어 이야기, 공간 팁, 소소한 일상도 좋아요."></textarea>
-              <div class="div-text-count-wrap"><span id="count-text">0</span>/300</div>
+              <div class="div-text-count-wrap"><span id="SPAN-COUNT">0</span>/300</div>
             </div>
           </div>
           <div class="div-one-column-wrap div-flex-none">
@@ -106,7 +108,7 @@
 
         <!-- 목록 / 등록 버튼 영역 -->
         <div id="DIV-WRITE-WRAP">
-          <div class="button-style list-button"><span>←</span> 목록으로</div>
+          <div class="button-style list-button" onclick="history.back();"><span>←</span> 목록으로</div>
           <div class="button-style disabled" id="WRITE-BTN">글 등록하기</div>
         </div>
         <!--  -->
