EDIT : 20250701 메세지함 기본 레이아웃 완료

--- a/html/userPage/myPage.html
+++ b/html/userPage/myPage.html
@@ -74,20 +74,19 @@
     <div id="DIV-CATEGORY-CONTAINER">
       <div id="DIV-CATEGORY-WRAP">
         <ul id="UL-CATEGORY">
-            <li class="ca-selected"></li>
-            <li class="ca-hover"></li>
-            <li class="li-category-wrap">
-                <div class="div-category div-selected" data-category="my-board">
-                    <img src="../../image/userPage/board_menu.png" class="ca-img" data-category="my-board">
-                    <div>작성 글 (10)</div>
-                </div>
-            </li>
-            <li class="li-category-wrap">
-                <div class="div-category" data-category="my-scrap">
-                    <img src="../../image/layout/scrap_no.png" class="ca-img" data-category="my-scrap">
-                    <div>스크랩 (7)</div>
-                </div>
-            </li>
+          <li class="ca-selected"></li>
+          <li class="li-category-wrap">
+            <div class="div-category div-selected" data-category="my-board">
+              <img src="../../image/userPage/board_menu.png" class="ca-img" data-category="my-board">
+              <div>작성 글 (10)</div>
+            </div>
+          </li>
+          <li class="li-category-wrap">
+            <div class="div-category" data-category="my-scrap">
+              <img src="../../image/layout/scrap_no.png" class="ca-img" data-category="my-scrap">
+              <div>스크랩 (7)</div>
+            </div>
+          </li>
         </ul>
       </div>
     </div>
@@ -97,7 +96,7 @@
     <div id="DIV-LIST-CONTAINER">
       <div class="list-slide-wrap">
 
-        <!-- 내가 작성한 게시글 -->
+        <!-- 받은 메세지 -->
         <div class="div-mypage-containe write-list-wrap">
 
             <!-- 글 목록 -->
