EDIT : 20250701 메세지 목록 완료

--- a/html/userPage/userPage.html
+++ b/html/userPage/userPage.html
@@ -227,7 +227,7 @@
     <div class="div-alert-wrap">
       <div id="DIV-MODAL-HEADER">
         <div class="div-modal-title">팔로워</div>
-        <img src="../../image/userPage/close_btn_grey.png" class="modal-follow-close" alt="close">
+        <img src="../../image/layout/close_btn_grey.png" class="modal-close modal-close-img" alt="close">
       </div>
 
       <div class="div-alert-content">
