EDIT : 20250703 공지사항 목록, 상세 완료

--- a/html/feedback/feedback.html
+++ b/html/feedback/feedback.html
@@ -44,8 +44,8 @@
       <ul id="UL-HEDAER-MENU">
         <li id="LI-HOME-LINK"><a href="../main.html">홈</a></li>
         <li id="LI-COMMUNITY-LINK"><a href="../../html/community/community.html">커뮤니티</a></li>
-        <li id="LI-NOTICE-LINK"><a href="">공지사항</a></li>
-        <li id="LI-FEEDBACK-LINK"><a href="">건의사항</a></li>
+        <li id="LI-NOTICE-LINK"><a href="../../html/notice/notice.html">공지사항</a></li>
+        <li id="LI-FEEDBACK-LINK"><a href="../../html/feedback/feedback.html">건의사항</a></li>
       </ul>
     </div>
     <!--  -->
