EDIT : 20250704 관리자 메인 완료, 사용자 관리 목록 페이지 레이아웃 완료

--- a/html/community/community.html
+++ b/html/community/community.html
@@ -70,7 +70,7 @@
               </select>
             </div>
             <div id="DIV-SEARCH-TEXT-WRAP">
-              <img src="../../image/community/search.png" alt="search">
+              <img src="../../image/layout/search.png" alt="search">
               <input type="text" name="search-text" id="INPUT-SEARCH-TEXT" placeholder="검색어 입력">
             </div>
           </div>
